fix mac dock counts doubling unread messages for accounts with . in the user name, r/sr=neil, bug 557960